# YOLOv8-Traffic-Sign-Detection

yolov8-traffic-sign/: CONTRIBUTING.md  cbam.py  cca_light.py  cca_light_v2.py  check_ts_results.py  compare_day_night.py  compare_imcmd_results.py  compare_results.py  create_day_night_configs.py  eval_day_night.py  eval_day_night_simple.py  eval_model.py  fix_checkpoint_epochs.py  generate_report_charts.py  imcmd_model.py  imcmd_modules.py  lisa_day.yaml  lisa_night.yaml  pyproject.toml  reconstruct_csv.py  requirements.txt  split_day_night_dataset.py  test_cbam.py  test_imcmd_forward.py  test_lcfe_model.py  test_v2.py  train_cbam.py  train_imcmd.py  train_lcfe.py  train_lcfe_v2.py  train_ts.py  train_yolo.py  yolov8s_cbam.yaml  yolov8s_imcmd_large.yaml  yolov8s_imcmd_small.yaml  yolov8s_imcmd_ts_large.yaml  yolov8s_imcmd_ts_small.yaml  yolov8s_lcfe.yaml  yolov8s_lcfe_v2.yaml  yolov8s_ts.yaml
yolov8-traffic-sign/configs/datasets/: lisa_day.yaml  lisa_night.yaml
yolov8-traffic-sign/configs/experiments/: baseline.yaml  imcmd_small.yaml  imcmd_ts_large.yaml
yolov8-traffic-sign/docs/: dataset_card.md  github_release_checklist.md  project_overview.md  results.md  roadmap.md
yolov8-traffic-sign/reports/: ablation_template.md  day_night_summary.csv  metrics_summary.csv  metrics_summary_template.csv
yolov8-traffic-sign/scripts/: check_classes.py  diagnose_augmented.py  evaluate.py  list_goforward.py  predict.py  prepare_folders.py  verify_redistributed.py  visualize_dataset_samples.py
yolov8-traffic-sign/tests/: test_cli.py  test_project_layout.py
(+7 files in other folders)
